--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,10 +5,11 @@
     editor = "Cao, Yixin  and
       Feng, Yang  and
       Xiong, Deyi",
-    booktitle = "Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (Volume 3: System Demonstrations)",
+    booktitle = "Proceedings of the 62nd Annual Meeting of the Association for Computational Linguistics (ACL 2024, Volume 3: System Demonstrations)",
     month = aug,
     year = "2024",
     location = "Bangkok, Thailand",
+    publisher = "Association for Computational Linguistics",
     publisher = "Association for Computational Linguistics",
     url = "https://aclanthology.org/2024.acl-demos.13",
     pages = "127--135",
@@ -43,7 +44,7 @@ publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3582768.3582795},
 abstract = {Text classification of unseen classes is a challenging Natural Language Processing task and is mainly attempted using two different types of approaches. Similarity-based approaches attempt to classify instances based on similarities between text document representations and class description representations. Zero-shot text classification approaches aim to generalize knowledge gained from a training task by assigning appropriate labels of unknown classes to text documents. Although existing studies have already investigated individual approaches to these categories, the experiments in literature do not provide a consistent comparison. This paper addresses this gap by conducting a systematic evaluation of different similarity-based and zero-shot approaches for text classification of unseen classes. Different state-of-the-art approaches are benchmarked on four text classification datasets, including a new dataset from the medical domain. Additionally, novel SimCSE [7] and SBERT-based [26] baselines are proposed, as other baselines used in existing work yield weak classification results and are easily outperformed. Finally, the novel similarity-based Lbl2TransformerVec approach is presented, which outperforms previous state-of-the-art approaches in unsupervised text classification. Our experiments show that similarity-based approaches significantly outperform zero-shot approaches in most cases. Additionally, using SimCSE or SBERT embeddings instead of simpler text representations increases similarity-based classification results even further.},
-booktitle = {Proceedings of the 2022 6th International Conference on Natural Language Processing and Information Retrieval},
+booktitle = {Proceedings of the 2022 6th International Conference on Natural Language Processing and Information Retrieval (NLPIR 2022)},
 pages = {6–15},
 numpages = {10},
 keywords = {Natural Language Processing, Unsupervised Text Classification, Zero-shot Text Classification},
@@ -56,7 +57,7 @@ preview = {UMAPs.pdf}
 @inproceedings{webist21,
 author={Tim Schopf and Daniel Braun and Florian Matthes},
 title={Lbl2Vec: An Embedding-based Approach for Unsupervised Document Retrieval on Predefined Topics},
-booktitle={Proceedings of the 17th International Conference on Web Information Systems and Technologies - WEBIST},
+booktitle={Proceedings of the 17th International Conference on Web Information Systems and Technologies (WEBIST 2021)},
 year={2021},
 pages={124-132},
 location={online},
@@ -78,7 +79,7 @@ editor="Marchiori, Massimo
 and Dom{\'i}nguez Mayo, Francisco Jos{\'e}
 and Filipe, Joaquim",
 title="Semantic Label Representations with Lbl2Vec: A Similarity-Based Approach for Unsupervised Text Classification",
-booktitle="Web Information Systems and Technologies",
+booktitle="Web Information Systems and Technologies (LNBIP, volume 469)",
 year="2023",
 publisher="Springer International Publishing",
 address="Cham",
@@ -103,7 +104,7 @@ preview="Doc2Vec_example.pdf"
       Li, Sujian  and
       Liu, Yang  and
       Chang, Chua-Hui",
-    booktitle = "Proceedings of the 2nd Conference of the Asia-Pacific Chapter of the Association for Computational Linguistics and the 12th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)",
+    booktitle = "Proceedings of the 2nd Conference of the Asia-Pacific Chapter of the Association for Computational Linguistics and the 12th International Joint Conference on Natural Language Processing (AACL 2022, Volume 1: Long Papers)",
     month = nov,
     year = "2022",
     address = "Online only",
@@ -141,7 +142,7 @@ preview="Doc2Vec_example.pdf"
       Matthes, Florian",
     editor = "Mitkov, Ruslan  and
       Angelova, Galia",
-    booktitle = "Proceedings of the 14th International Conference on Recent Advances in Natural Language Processing",
+    booktitle = "Proceedings of the 14th International Conference on Recent Advances in Natural Language Processing (RANLP 2023)",
     month = sep,
     year = "2023",
     location = "Varna, Bulgaria",
@@ -160,7 +161,7 @@ preview="Doc2Vec_example.pdf"
       Matthes, Florian",
     editor = "Mitkov, Ruslan  and
       Angelova, Galia",
-    booktitle = "Proceedings of the 14th International Conference on Recent Advances in Natural Language Processing",
+    booktitle = "Proceedings of the 14th International Conference on Recent Advances in Natural Language Processing (RANLP 2023)",
     month = sep,
     year = "2023",
     location = "Varna, Bulgaria",
@@ -179,7 +180,7 @@ preview="Doc2Vec_example.pdf"
       Matthes, Florian",
     editor = "Mitkov, Ruslan  and
       Angelova, Galia",
-    booktitle = "Proceedings of the 14th International Conference on Recent Advances in Natural Language Processing",
+    booktitle = "Proceedings of the 14th International Conference on Recent Advances in Natural Language Processing (RANLP 2023)",
     month = sep,
     year = "2023",
     location = "Varna, Bulgaria",
@@ -192,7 +193,7 @@ preview="Doc2Vec_example.pdf"
 @inproceedings{kmis23,
 author={Tim Schopf and Nektarios Machner and Florian Matthes},
 title={A Knowledge Graph Approach for Exploratory Search in Research Institutions},
-booktitle={Proceedings of the 15th International Joint Conference on Knowledge Discovery, Knowledge Engineering and Knowledge Management - KMIS},
+booktitle={Proceedings of the 15th International Joint Conference on Knowledge Discovery, Knowledge Engineering and Knowledge Management (IC3K 2023) - KMIS},
 year={2023},
 pages={265-270},
 publisher={SciTePress},
@@ -230,7 +231,7 @@ preview={rikg-app-screenshot.pdf}
 }
 @INPROCEEDINGS{10123521,
   author={Schopf, Tim and Dresse, Kilian and Matthes, Florian},
-  booktitle={2022 5th International Conference on Artificial Intelligence for Industries (AI4I)},
+  booktitle={2022 5th International Conference on Artificial Intelligence for Industries (AI4I 2022)},
   title={Towards AI Platforms for Stationary Retail},
   location={Laguna Hills, CA, USA},
   year={2022},
@@ -251,7 +252,7 @@ publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3535782.3535835},
 abstract = {Word embeddings represent the semantic meanings of words in high-dimensional vector space. Because of this capability, word embeddings could be used in a wide range of Natural Language Processing (NLP) tasks. While domain-specific monolingual word embeddings are common in literature, domain-specific bilingual word embeddings are uncommon. In general, large text corpora are required for training high quality word embeddings. Furthermore, training domain-specific word embeddings necessitates the use of source texts from the relevant domain. To train bilingual domain-specific word embeddings, the domain-specific texts must also be available in two different languages. In this paper, we use a large dataset of engineering-related articles in German and English to train bilingual engineering-specific word embedding models using different approaches. We will evaluate our trained models, identify the most promising approach, and demonstrate that the best performing one is very capable of representing semantic relationships between engineering-specific words and mapping languages in a shared vector space. Moreover, we show that the additional use of an engineering-specific learning dictionary can improve the quality of bilingual engineering-specific word embeddings.},
-booktitle = {Proceedings of the 4th International Conference on Management Science and Industrial Engineering},
+booktitle = {Proceedings of the 4th International Conference on Management Science and Industrial Engineering (MSIE 2022)},
 pages = {407–413},
 numpages = {7},
 location = {Chiang Mai, Thailand},
@@ -267,7 +268,7 @@ publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3460824.3460826},
 abstract = {Since the introduction of Word2Vec in 2013, so-called word embeddings, dense vector representation of words that are supposed to capture their semantic meaning, have become a universally applied technique in a wide range of Natural Language Processing (NLP) tasks and domains. The vector representations they provide are learned on huge corpora of unlabeled text data. Due to the large amount of data and computing power that is necessary to train such embedding models, very often, pre-trained models are applied which have been trained on domain unspecific data like newspaper articles or Wikipedia entries. In this paper, we present a domain-specific embedding model that is trained exclusively on texts from the domain of engineering. We will show that such a domain-specific embeddings model performs better in different NLP tasks and can therefore help to improve NLP-based AI in the domain of Engineering.},
-booktitle = {Proceedings of the 2021 3rd International Conference on Management Science and Industrial Engineering},
+booktitle = {Proceedings of the 2021 3rd International Conference on Management Science and Industrial Engineering (MSIE 2021)},
 pages = {8–12},
 numpages = {5},
 keywords = {Engineering, Word Embeddings},
@@ -283,4 +284,55 @@ series = {MSIE '21}
       url={https://doi.org/10.30819/5768},
       abstract={Knowledge management is a critical challenge for enterprises in today's digital world, as the volume and complexity of data being generated and collected continue to grow incessantly. Knowledge graphs (KG) emerged as a promising solution to this problem by providing a flexible, scalable, and semantically rich way to organize and make sense of data. This paper builds upon a recent survey of the research literature on combining KGs and Natural Language Processing (NLP). Based on selected application scenarios from enterprise context, we discuss synergies that result from such a combination. We cover various approaches from the three core areas of KG construction, reasoning as well as KG-based NLP tasks. In addition to explaining innovative enterprise use cases, we assess their maturity in terms of practical applicability and conclude with an outlook on emergent application areas for the future.},
       preview={rq2_task_domain_bar.pdf}
+}
+
+@inproceedings{schopf-etal-2025-natural,
+    title = "Natural Language Inference Fine-tuning for Scientific Hallucination Detection",
+    author = {Schopf, Tim  and
+      Vladika, Juraj  and
+      F{\"a}rber, Michael  and
+      Matthes, Florian},
+    editor = "Singh, Amanpreet",
+    booktitle = "Proceedings of the Fifth Workshop on Scholarly Document Processing @ACL (SDP@ACL 2025)",
+    month = aug,
+    year = "2025",
+    address = "Venice, Austria",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2025.sdp-1.33",
+    pages = "344--352",
+    ISBN = "979-8-89176-265-7",
+    abstract = "Modern generative Large Language Models (LLMs) are capable of generating text that sounds coherent and convincing, but are also prone to producing \textit{hallucinations}, facts that contradict the world knowledge. Even in the case of Retrieval-Augmented Generation (RAG) systems, where relevant context is first retrieved and passed in the input, the generated facts can contradict or not be verifiable by the provided references. This has motivated SciHal 2025, a shared task that focuses on the detection of hallucinations for scientific content. The two subtasks focused on: (1) predicting whether a claim from a generated LLM answer is entailed, contradicted, or unverifiable by the used references; (2) predicting a fine-grained category of erroneous claims. Our best performing approach used an ensemble of fine-tuned encoder-only ModernBERT and DeBERTa-v3 models for classification. Out of nine competing teams, our approach achieved the first place in sub-task 1 and the second place in sub-task 2.",
+    preview= "scihal_ranking.pdf"
+}
+
+@inproceedings{popovic-etal-2025-docie,
+    title = "{D}oc{IE}@{XLLM}25: In-Context Learning for Information Extraction using Fully Synthetic Demonstrations",
+    author = {Popovic, Nicholas  and
+      Kangen, Ashish  and
+      Schopf, Tim  and
+      F{\"a}rber, Michael},
+    editor = "Fei, Hao  and
+      Tu, Kewei  and
+      Zhang, Yuhui  and
+      Hu, Xiang  and
+      Han, Wenjuan  and
+      Jia, Zixia  and
+      Zheng, Zilong  and
+      Cao, Yixin  and
+      Zhang, Meishan  and
+      Lu, Wei  and
+      Siddharth, N.  and
+      {\O}vrelid, Lilja  and
+      Xue, Nianwen  and
+      Zhang, Yue",
+    booktitle = "Proceedings of the 1st Joint Workshop on Large Language Models and Structure Modeling @ACL (XLLM@ACL 2025)",
+    month = jul,
+    year = "2025",
+    address = "Vienna, Austria",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2025.xllm-1.26",
+    pages = "298--309",
+    ISBN = "979-8-89176-286-2",
+    abstract = "Large, high-quality annotated corpora remain scarce in document-level entity and relation extraction in zero-shot or few-shot settings.In this paper, we present a fully automatic, LLM-based pipeline for synthetic data generation and in-context learning for document-level entity and relation extraction.In contrast to existing approaches that rely on manually annotated demonstrations or direct zero-shot inference, our method combines synthetic data generation with retrieval-based in-context learning, using a reasoning-optimized language model.This allows us to build a high-quality demonstration database without manual annotation and to dynamically retrieve relevant examples at inference time.Based on our approach we produce a synthetic dataset of over $5k$ Wikipedia abstracts with approximately $59k$ entities and $30k$ relation triples.Finally, we evaluate in-context learning performance on the DocIE shared task, extracting entities and relations from long documents in a zero-shot setting.The code and synthetic dataset are made available for future research.",
+    preview= "xllm_pipeline.pdf"
 }
