--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
     website = "https://nlpkg.sebis.cit.tum.de",
     github = "https://github.com/NLP-Knowledge-Graph/NLP-KG-WebApp",
     abstract = "Scientific literature searches are often exploratory, whereby users are not yet familiar with a particular field or concept but are interested in learning more about it. However, existing systems for scientific literature search are typically tailored to keyword-based lookup searches, limiting the possibilities for exploration. We propose NLP-KG, a feature-rich system designed to support the exploration of research literature in unfamiliar natural language processing (NLP) fields. In addition to a semantic search, NLP-KG allows users to easily find survey papers that provide a quick introduction to a field of interest. Further, a Fields of Study hierarchy graph enables users to familiarize themselves with a field and its related areas. Finally, a chat interface allows users to ask questions about unfamiliar concepts or specific articles in NLP and obtain answers grounded in knowledge retrieved from scientific publications. Our system provides users with comprehensive exploration possibilities, supporting them in investigating the relationships between different fields, understanding unfamiliar concepts in NLP, and finding relevant research literature. Demo, video, and code are available at: https://github.com/NLP-Knowledge-Graph/NLP-KG-WebApp.",
-    preview="NLP-KG_architecture.pdf"
+    preview="NLP-KG_architecture.png"
 }
 @inproceedings{schopf_etal_kdir22,
 author={Tim Schopf and Simon Klimek and Florian Matthes},
@@ -32,7 +32,7 @@ issn={2184-3228},
 abstract={Keyphrase extraction is the process of automatically selecting a small set of most relevant phrases from a given text. Supervised keyphrase extraction approaches need large amounts of labeled training data and perform poorly outside the domain of the training data (Bennani-Smires et al., 2018). In this paper, we present PatternRank, which leverages pretrained language models and part-of-speech for unsupervised keyphrase extraction from single documents. Our experiments show PatternRank achieves higher precision, recall and F1 -scores than previous state-of-the-art approaches. In addition, we present the KeyphraseVectorizers package, which allows easy modification of part-of-speech patterns for candidate keyphrase selection, and hence adaptation of our approach to any domain.},
 github={https://github.com/TimSchopf/KeyphraseVectorizers},
 location={Valletta, Malta},
-preview={Keyphrase_Extraction_Visualization.pdf}
+preview={Keyphrase_Extraction_Visualization.png}
 }
 
 @inproceedings{10.1145/3582768.3582795,
@@ -51,7 +51,7 @@ keywords = {Natural Language Processing, Unsupervised Text Classification, Zero-
 location = {Bangkok, Thailand},
 series = {NLPIR '22},
 github = {https://github.com/sebischair/Medical-Abstracts-TC-Corpus},
-preview = {UMAPs.pdf}
+preview = {UMAPs.png}
 }
 
 @inproceedings{webist21,
@@ -68,7 +68,7 @@ isbn={978-989-758-536-4},
 issn={2184-3252},
 github={https://github.com/sebischair/Lbl2Vec},
 abstract={In this paper, we consider the task of retrieving documents with predefined topics from an unlabeled document dataset using an unsupervised approach. The proposed unsupervised approach requires only a small number of keywords describing the respective topics and no labeled document. Existing approaches either heavily relied on a large amount of additionally encoded world knowledge or on term-document frequencies. Contrariwise, we introduce a method that learns jointly embedded document and word vectors solely from the unlabeled document dataset in order to find documents that are semantically similar to the topics described by the keywords. The proposed method requires almost no text preprocessing but is simultaneously effective at retrieving relevant documents with high probability. When successively retrieving documents on different predefined topics from publicly available and commonly used datasets, we achieved an average area under the receiver operating characteristic curve val ue of 0.95 on one dataset and 0.92 on another. Further, our method can be used for multiclass document classification, without the need to assign labels to the dataset in advance. Compared with an unsupervised classification baseline, we increased F1 scores from 76.6 to 82.7 and from 61.0 to 75.1 on the respective datasets. For easy replication of our approach, we make the developed Lbl2Vec code publicly available as a ready-to-use tool under the 3-Clause BSD license.},
-preview={Basketball_semantic_feature_space.pdf}
+preview={Basketball_semantic_feature_space.png}
 }
 
 @InProceedings{10.1007/978-3-031-24197-0_4,
@@ -88,7 +88,7 @@ abstract="In this paper, we evaluate the Lbl2Vec approach for unsupervised text 
 isbn="978-3-031-24197-0",
 url="https://link.springer.com/chapter/10.1007/978-3-031-24197-0_4",
 github="https://github.com/sebischair/Lbl2Vec",
-preview="Doc2Vec_example.pdf"
+preview="Doc2Vec_example.png"
 }
 
 @inproceedings{schneider-etal-2022-decade,
@@ -114,7 +114,7 @@ preview="Doc2Vec_example.pdf"
     abstract = "In pace with developments in the research field of artificial intelligence, knowledge graphs (KGs) have attracted a surge of interest from both academia and industry. As a representation of semantic relations between entities, KGs have proven to be particularly relevant for natural language processing (NLP), experiencing a rapid spread and wide adoption within recent years. Given the increasing amount of research work in this area, several KG-related approaches have been surveyed in the NLP research community. However, a comprehensive study that categorizes established topics and reviews the maturity of individual research streams remains absent to this day. Contributing to closing this gap, we systematically analyzed 507 papers from the literature on KGs in NLP. Our survey encompasses a multifaceted review of tasks, research types, and contributions. As a result, we present a structured overview of the research landscape, provide a taxonomy of tasks, summarize our findings, and highlight directions for future work.",
     github = "https://github.com/sebischair/KG-in-NLP-survey",
     location={online},
-    preview="task_taxonomy.pdf"
+    preview="task_taxonomy.png"
 }
 @inproceedings{schopf-etal-2024-efficient,
     title = "Efficient Few-shot Learning for Multi-label Classification of Scientific Documents with Many Classes",
@@ -151,7 +151,7 @@ preview="Doc2Vec_example.pdf"
     pages = "1034--1045",
     abstract = "As an efficient approach to understand, generate, and process natural language texts, research in natural language processing (NLP) has exhibited a rapid spread and wide adoption in recent years. Given the increasing research work in this area, several NLP-related approaches have been surveyed in the research community. However, a comprehensive study that categorizes established topics, identifies trends, and outlines areas for future research remains absent. Contributing to closing this gap, we have systematically classified and analyzed research papers in the ACL Anthology. As a result, we present a structured overview of the research landscape, provide a taxonomy of fields of study in NLP, analyze recent developments in NLP, summarize our findings, and highlight directions for future work.",
     github = "https://github.com/sebischair/Exploring-NLP-Research",
-    preview = "NLP-Taxonomy.pdf"
+    preview = "NLP-Taxonomy.png"
 }
 
 @inproceedings{schopf-etal-2023-efficient,
@@ -169,7 +169,7 @@ preview="Doc2Vec_example.pdf"
     url = "https://aclanthology.org/2023.ranlp-1.112/",
     pages = "1046--1053",
     abstract = "Sentence embeddings enable us to capture the semantic similarity of short texts. Most sentence embedding models are trained for general semantic textual similarity tasks. Therefore, to use sentence embeddings in a particular domain, the model must be adapted to it in order to achieve good results. Usually, this is done by fine-tuning the entire sentence embedding model for the domain of interest. While this approach yields state-of-the-art results, all of the model`s weights are updated during fine-tuning, making this method resource-intensive. Therefore, instead of fine-tuning entire sentence embedding models for each target domain individually, we propose to train lightweight adapters. These domain-specific adapters do not require fine-tuning all underlying sentence embedding model parameters. Instead, we only train a small number of additional parameters while keeping the weights of the underlying sentence embedding model fixed. Training domain-specific adapters allows always using the same base model and only exchanging the domain-specific adapters to adapt sentence embeddings to a specific domain. We show that using adapters for parameter-efficient domain adaptation of sentence embeddings yields competitive performance within 1% of a domain-adapted, entirely fine-tuned sentence embedding model while only training approximately 3.6% of the parameters.",
-    preview = {Adapter-based_Sentence_Embedding.pdf}
+    preview = {Adapter-based_Sentence_Embedding.png}
 }
 
 @inproceedings{schopf-etal-2023-aspectcse,
@@ -188,7 +188,7 @@ preview="Doc2Vec_example.pdf"
     url = "https://aclanthology.org/2023.ranlp-1.113/",
     pages = "1054--1065",
     abstract = "Generic sentence embeddings provide coarse-grained approximation of semantic textual similarity, but ignore specific aspects that make texts similar. Conversely, aspect-based sentence embeddings provide similarities between texts based on certain predefined aspects. Thus, similarity predictions of texts are more targeted to specific requirements and more easily explainable. In this paper, we present AspectCSE, an approach for aspect-based contrastive learning of sentence embeddings. Results indicate that AspectCSE achieves an average improvement of 3.97{\%} on information retrieval tasks across multiple aspects compared to the previous best results. We also propose the use of Wikidata knowledge graph properties to train models of multi-aspect sentence embeddings in which multiple specific aspects are simultaneously considered during similarity predictions. We demonstrate that multi-aspect embeddings outperform even single-aspect embeddings on aspect-specific information retrieval tasks. Finally, we examine the aspect-based sentence embedding space and demonstrate that embeddings of semantically similar aspect labels are often close, even without explicit similarity training between different aspect labels.",
-    preview = "Aspect-based-Contrastive-Learning-Figure.pdf"
+    preview = "Aspect-based-Contrastive-Learning-Figure.png"
 }
 @inproceedings{kmis23,
 author={Tim Schopf and Nektarios Machner and Florian Matthes},
@@ -203,7 +203,7 @@ isbn={978-989-758-671-2},
 issn={2184-3228},
 location={Rome, Italy},
 abstract={Over the past decades, research institutions have grown increasingly and consequently also their research output. This poses a significant challenge for researchers seeking to understand the research landscape of an institution. The process of exploring the research landscape of institutions has a vague information need, no precise goal, and is open-ended. Current applications are not designed to fulfill the requirements for exploratory search in research institutions. In this paper, we analyze exploratory search in research institutions and propose a knowledge graph-based approach to enhance this process.},
-preview={rikg-app-screenshot.pdf}
+preview={rikg-app-screenshot.png}
 }
 @inproceedings{meisenbacher-etal-2024-improved,
     title = "An Improved Method for Class-specific Keyword Extraction: A Case Study in the {G}erman Business Registry",
@@ -283,7 +283,7 @@ series = {MSIE '21}
       pages={271-285},
       url={https://doi.org/10.30819/5768},
       abstract={Knowledge management is a critical challenge for enterprises in today's digital world, as the volume and complexity of data being generated and collected continue to grow incessantly. Knowledge graphs (KG) emerged as a promising solution to this problem by providing a flexible, scalable, and semantically rich way to organize and make sense of data. This paper builds upon a recent survey of the research literature on combining KGs and Natural Language Processing (NLP). Based on selected application scenarios from enterprise context, we discuss synergies that result from such a combination. We cover various approaches from the three core areas of KG construction, reasoning as well as KG-based NLP tasks. In addition to explaining innovative enterprise use cases, we assess their maturity in terms of practical applicability and conclude with an outlook on emergent application areas for the future.},
-      preview={rq2_task_domain_bar.pdf}
+      preview={rq2_task_domain_bar.png}
 }
 
 @inproceedings{schopf-etal-2025-natural,
@@ -302,7 +302,7 @@ series = {MSIE '21}
     pages = "344--352",
     ISBN = "979-8-89176-265-7",
     abstract = "Modern generative Large Language Models (LLMs) are capable of generating text that sounds coherent and convincing, but are also prone to producing \textit{hallucinations}, facts that contradict the world knowledge. Even in the case of Retrieval-Augmented Generation (RAG) systems, where relevant context is first retrieved and passed in the input, the generated facts can contradict or not be verifiable by the provided references. This has motivated SciHal 2025, a shared task that focuses on the detection of hallucinations for scientific content. The two subtasks focused on: (1) predicting whether a claim from a generated LLM answer is entailed, contradicted, or unverifiable by the used references; (2) predicting a fine-grained category of erroneous claims. Our best performing approach used an ensemble of fine-tuned encoder-only ModernBERT and DeBERTa-v3 models for classification. Out of nine competing teams, our approach achieved the first place in sub-task 1 and the second place in sub-task 2.",
-    preview= "scihal_ranking.pdf"
+    preview= "scihal_ranking.png"
 }
 
 @inproceedings{popovic-etal-2025-docie,
@@ -334,5 +334,5 @@ series = {MSIE '21}
     pages = "298--309",
     ISBN = "979-8-89176-286-2",
     abstract = "Large, high-quality annotated corpora remain scarce in document-level entity and relation extraction in zero-shot or few-shot settings.In this paper, we present a fully automatic, LLM-based pipeline for synthetic data generation and in-context learning for document-level entity and relation extraction.In contrast to existing approaches that rely on manually annotated demonstrations or direct zero-shot inference, our method combines synthetic data generation with retrieval-based in-context learning, using a reasoning-optimized language model.This allows us to build a high-quality demonstration database without manual annotation and to dynamically retrieve relevant examples at inference time.Based on our approach we produce a synthetic dataset of over $5k$ Wikipedia abstracts with approximately $59k$ entities and $30k$ relation triples.Finally, we evaluate in-context learning performance on the DocIE shared task, extracting entities and relations from long documents in a zero-shot setting.The code and synthetic dataset are made available for future research.",
-    preview= "xllm_pipeline.pdf"
+    preview= "xllm_pipeline.png"
 }
