add phd thesis to publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -351,3 +351,19 @@ series = {MSIE '21}
     preview= "xllm_pipeline.png"
 }
 
+@phdthesis{dissertation,
+	author = {Schopf, Tim},
+	title = {Semantic Knowledge Representation and Grounded Natural Language Generation for Exploratory Search of Scholarly Literature},
+	month = {nov},
+	year = {2025},
+	school = {Technische Universität München},
+	pages = {297},
+	language = {en},
+	abstract = {Researchers face significant challenges in keeping up with the vast and rapidly growing body of scholarly literature. They frequently need to conduct exploratory searches for unfamiliar concepts or research fields. Traditional keyword-based search systems are limited for such open-ended inquiries. This thesis investigates how a knowledge graph and grounded natural language generation approaches can be integrated into a scholarly literature search system to effectively support exploratory searches.},
+	keywords = {Natural Language Processing;Knowledge Graphs;Exploratory Search;Scholarly Domain},
+	note = {},
+	url = {https://mediatum.ub.tum.de/1774971},
+	doi = {},
+	preview= {phd_thesis_title.png}
+}
+
